--- a/alx-zero_day.ipynb
+++ b/alx-zero_day.ipynb
@@ -187,9 +187,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "warning: in the working copy of 'alx-zero_day.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main 27eeca3]  commit\n",
+      " 4 files changed, 309 insertions(+), 1 deletion(-)\n",
+      " create mode 100644 0x03-git/README.md\n",
+      " create mode 100644 alx-zero_day.ipynb\n",
+      " create mode 100644 image.png\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "error: remote origin already exists.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "branch 'main' set up to track 'origin/main'.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/elkomysara/alx-zero_day.git\n",
+      "   e6b53c3..27eeca3  main -> main\n"
+     ]
+    }
+   ],
    "source": [
     "!git add .\n",
     "!git commit -m \" commit\"\n",
