--- a/alx-zero_day.ipynb
+++ b/alx-zero_day.ipynb
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -201,11 +201,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 27eeca3]  commit\n",
-      " 4 files changed, 309 insertions(+), 1 deletion(-)\n",
-      " create mode 100644 0x03-git/README.md\n",
-      " create mode 100644 alx-zero_day.ipynb\n",
-      " create mode 100644 image.png\n"
+      "[main 72632b1]  commit\n",
+      " 1 file changed, 43 insertions(+), 2 deletions(-)\n"
      ]
     },
     {
@@ -227,14 +224,13 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-zero_day.git\n",
-      "   e6b53c3..27eeca3  main -> main\n"
+      "   27eeca3..72632b1  main -> main\n"
      ]
     }
    ],
    "source": [
     "!git add .\n",
     "!git commit -m \" commit\"\n",
-    "!git branch -M main\n",
     "!git remote add origin git@github.com:elkomysara/alx-zero_day.git\n",
     "!git push -u origin main"
    ]
