--- a/alx-zero_day.ipynb
+++ b/alx-zero_day.ipynb
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -201,21 +201,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 72632b1]  commit\n",
-      " 1 file changed, 43 insertions(+), 2 deletions(-)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "error: remote origin already exists.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "[main 4e43a32]  commit\n",
+      " 1 file changed, 4 insertions(+), 8 deletions(-)\n",
       "branch 'main' set up to track 'origin/main'.\n"
      ]
     },
@@ -224,14 +211,14 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-zero_day.git\n",
-      "   27eeca3..72632b1  main -> main\n"
+      "   72632b1..4e43a32  main -> main\n"
      ]
     }
    ],
    "source": [
     "!git add .\n",
     "!git commit -m \" commit\"\n",
-    "!git remote add origin git@github.com:elkomysara/alx-zero_day.git\n",
+    "!git branch -M main\n",
     "!git push -u origin main"
    ]
   },
