--- a/alx-zero_day.ipynb
+++ b/alx-zero_day.ipynb
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -201,8 +201,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 4e43a32]  commit\n",
-      " 1 file changed, 4 insertions(+), 8 deletions(-)\n",
+      "[main 4276ba1]  commit\n",
+      " 1 file changed, 5 insertions(+), 18 deletions(-)\n",
       "branch 'main' set up to track 'origin/main'.\n"
      ]
     },
@@ -211,11 +211,12 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-zero_day.git\n",
-      "   72632b1..4e43a32  main -> main\n"
+      "   4e43a32..4276ba1  main -> main\n"
      ]
     }
    ],
    "source": [
+    "#commiting and pushing code to github\n",
     "!git add .\n",
     "!git commit -m \" commit\"\n",
     "!git branch -M main\n",
