Starting to code today, so cool

--- a/alx-zero_day.ipynb
+++ b/alx-zero_day.ipynb
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -201,8 +201,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 4276ba1]  commit\n",
-      " 1 file changed, 5 insertions(+), 18 deletions(-)\n",
+      "[main 73b32d7]  commit\n",
+      " 1 file changed, 5 insertions(+), 4 deletions(-)\n",
       "branch 'main' set up to track 'origin/main'.\n"
      ]
     },
@@ -211,14 +211,14 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-zero_day.git\n",
-      "   4e43a32..4276ba1  main -> main\n"
+      "   4276ba1..73b32d7  main -> main\n"
      ]
     }
    ],
    "source": [
     "#commiting and pushing code to github\n",
     "!git add .\n",
-    "!git commit -m \" commit\"\n",
+    "!git commit -m \"Starting to code today, so cool\"\n",
     "!git branch -M main\n",
     "!git push -u origin main"
    ]
@@ -227,7 +227,100 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### NEXT alx-zero_day"
+    "### 2. Coding fury road"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### For the moment we have an empty project directory containing only a <code> README.md </code>. It’s time to code!\n",
+    "\n",
+    "* Create these directories at the root of your project: <code> bash, c, js </code>\n",
+    "* Create these empty files:\n",
+    "    * <code> c/c_is_fun.c </code>\n",
+    "    * <code> js/main.js </code>\n",
+    "    * <code> js/index.js </code>\n",
+    "* Create a file <code> bash/alx </code>  with these two lines inside:<code> #!/bin/bash and echo \"ALX\" </code> \n",
+    "* Create a file <code> bash/school </code>  with these two lines inside: <code> #!/bin/bash and echo \"School\" </code> \n",
+    "* Add all these new files to  <code> git </code>\n",
+    "* Commit your changes <code> (message: “Starting to code today, so cool”)  </code> and push to the remote server\n",
+    "\n",
+    "#### Repo:\n",
+    "* GitHub repository:   <code>alx-zero_day </code>\n",
+    "* Directory:   <code> 0x03-git </code>\n",
+    "* File:   <code> bash/alx, bash/school, c/c_is_fun.c, js/main.js, js/index.js </code>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create dir's (bach, c, js)\n",
+    "\n",
+    "!mkdir \"C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-zero_day/0x03-git/bash\"  \n",
+    "!mkdir \"C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-zero_day/0x03-git/c\" \n",
+    "!mkdir \"C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-zero_day/0x03-git/js\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create empty files \"c/c_is_fun.c\", \"js/main.js\", \"js/index.js\"\n",
+    "\n",
+    "!touch \"C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-zero_day/0x03-git/c/c_is_fun.c\"\n",
+    "!touch \"C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-zero_day/0x03-git/js/main.js \"\n",
+    "!touch \"C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-zero_day/0x03-git/js/index.js\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a file bash/alx with these two lines inside: #!/bin/bash and echo \"ALX\"\n",
+    "!echo -e '#!/bin/bash\\necho \"ALX\"' > \"C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-zero_day/0x03-git/bash/alx\" \n",
+    "#Create a file bash/school with these two lines inside: #!/bin/bash and echo \"School\"\n",
+    "!echo -e '#!/bin/bash\\necho \"School\"' > \"C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-zero_day/0x03-git/bash/school\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "warning: in the working copy of 'alx-zero_day.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Add all these new files to git\n",
+    "!git add .\n",
+    "#Commit your changes (message: “Starting to code today, so cool”) and push to the remote server\n",
+    "!git commit -m  \n",
+    "!git push"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### NEXT <code> alx-zero_day </code>"
    ]
   },
   {
