Starting to code today, so cool

--- a/alx-zero_day.ipynb
+++ b/alx-zero_day.ipynb
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -201,8 +201,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 73b32d7]  commit\n",
-      " 1 file changed, 5 insertions(+), 4 deletions(-)\n",
+      "[main c315d8c] Starting to code today, so cool\n",
+      " 6 files changed, 101 insertions(+), 6 deletions(-)\n",
+      " create mode 100644 0x03-git/bash/alx\n",
+      " create mode 100644 0x03-git/bash/school\n",
+      " create mode 100644 0x03-git/c/c_is_fun.c\n",
+      " create mode 100644 0x03-git/js/index.js\n",
+      " create mode 100644 0x03-git/js/main.js\n",
       "branch 'main' set up to track 'origin/main'.\n"
      ]
     },
@@ -211,7 +216,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-zero_day.git\n",
-      "   4276ba1..73b32d7  main -> main\n"
+      "   73b32d7..c315d8c  main -> main\n"
      ]
     }
    ],
@@ -307,8 +312,9 @@
     "# Add all these new files to git\n",
     "!git add .\n",
     "#Commit your changes (message: “Starting to code today, so cool”) and push to the remote server\n",
-    "!git commit -m  \n",
-    "!git push"
+    "!git commit -m \"Starting to code today, so cool\"\n",
+    "!git branch -M main\n",
+    "!git push -u origin main"
    ]
   },
   {
