My personal work

--- a/alx-zero_day.ipynb
+++ b/alx-zero_day.ipynb
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -305,6 +305,23 @@
      "output_type": "stream",
      "text": [
       "warning: in the working copy of 'alx-zero_day.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main a76cad3] Starting to code today, so cool\n",
+      " 1 file changed, 12 insertions(+), 6 deletions(-)\n",
+      "branch 'main' set up to track 'origin/main'.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/elkomysara/alx-zero_day.git\n",
+      "   c315d8c..a76cad3  main -> main\n"
      ]
     }
    ],
@@ -320,7 +337,93 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### 3. Collaboration is the base of a company"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### A branch is like a copy of your project. It’s used mainly for:\n",
+    "\n",
+    "* adding a feature in development\n",
+    "* collaborating on the same project with other developers\n",
+    "* not breaking your entire repository\n",
+    "* not upsetting your co-workers\n",
+    "* The purpose of a branch is to isolate your work from the main code base of your project and/or from your co-workers’ work.\n",
+    "\n",
+    "#### For this project, create a branch update_script and in this branch:\n",
+    "\n",
+    "* Create an empty file named bash/98\n",
+    "* Update bash/alx by replacing echo \"ALX\" with echo \"ALX School\"\n",
+    "* Update bash/school by replacing echo \"School\" with echo \"The school is open!\"\n",
+    "* Add and commit these changes (message: “My personal work”)\n",
+    "* Push this new branch Tips\n",
+    "\n",
+    "#### Add quick fix in your project and it needs to be deployed now:\n",
+    "\n",
+    "* Change branch to main\n",
+    "* Update the file bash/alx by replacing echo \"ALX\" with echo \"ALX School is so cool!\"\n",
+    "* Delete the directory js\n",
+    "* Commit your changes (message: “Hot fix”) and push to the origin\n",
+    "\n",
+    "\n",
+    "#### Repo:\n",
+    "* GitHub repository: alx-zero_day\n",
+    "* Directory: 0x03-git\n",
+    "* File: bash/alx, bash/school, bash/98"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#create a branch update_script and in this branch:\n",
+    "!git branch update_script\n",
+    "!git checkout update_script\n",
+    "\n",
+    "#Create an empty file named bash/98\n",
+    "!touch \"C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-zero_day/0x03-git/bash/98\"\n",
+    "\n",
+    "#Update bash/alx by replacing echo \"ALX\" with echo \"ALX School\"\n",
+    "!echo -e '!#/bin/bash\\necho \"ALX School\"' > \"C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-zero_day/0x03-git/bash/alx\"\n",
+    "\n",
+    "#Update bash/school by replacing echo \"School\" with echo \"The school is open!\"\n",
+    "!echo -e '!#/bin/bash\\necho \"The school is open!\"' > \"C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-zero_day/0x03-git/bash/school\"\n",
+    "\n",
+    "#Add and commit these changes (message: “My personal work”)\n",
+    "!git add .\n",
+    "!git commit -m \"My personal work\"\n",
+    "!git push -u origin update_script\n",
+    "!git push --set-upstream origin update_script\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Now that the changes are isolated correctly from the main branch\n",
+    "\n",
+    "#Create a quick fix in your project and it needs to be deployed now:\n",
+    "#Change branch to main\n",
+    "!git switch main\n",
+    "\n",
+    "#Update the file bash/alx by replacing echo \"ALX\" with echo \"ALX School is so cool!\"\n",
+    "!echo -e '!#/bin/bash\\necho \"ALX School is so cool!\"' > \"C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-zero_day/0x03-git/bash/alx\"\n",
+    "\n",
+    "#Delete the directory js\n",
+    "!rm -r ~/alx-zero_day/0x03-git/js/\n",
+    "#Commit your changes (message: “Hot fix”) and push to the origin\n",
+    "!git add .\n",
+    "!git commit -m \"Hot fix\"\n",
+    "!git push"
+   ]
   },
   {
    "cell_type": "markdown",
