--- a/alx-zero_day.ipynb
+++ b/alx-zero_day.ipynb
@@ -377,9 +377,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "M\talx-zero_day.ipynb\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Switched to branch 'update_script'\n",
+      "warning: in the working copy of 'alx-zero_day.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[update_script 35cf8fd] My personal work\n",
+      " 4 files changed, 107 insertions(+), 4 deletions(-)\n",
+      " create mode 100644 0x03-git/bash/98\n",
+      "branch 'update_script' set up to track 'origin/update_script'.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "remote: \n",
+      "remote: Create a pull request for 'update_script' on GitHub by visiting:        \n",
+      "remote:      https://github.com/elkomysara/alx-zero_day/pull/new/update_script        \n",
+      "remote: \n",
+      "To https://github.com/elkomysara/alx-zero_day.git\n",
+      " * [new branch]      update_script -> update_script\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "branch 'update_script' set up to track 'origin/update_script'.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Everything up-to-date\n"
+     ]
+    }
+   ],
    "source": [
     "#create a branch update_script and in this branch:\n",
     "!git branch update_script\n",
