--- a/alx-zero_day.ipynb
+++ b/alx-zero_day.ipynb
@@ -456,9 +456,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "error: Your local changes to the following files would be overwritten by checkout:\n",
+      "\talx-zero_day.ipynb\n",
+      "Please commit your changes or stash them before you switch branches.\n",
+      "Aborting\n",
+      "rm: ~/alx-zero_day/0x03-git/js: No such file or directory\n",
+      "warning: in the working copy of 'alx-zero_day.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[update_script f70a2ae] Hot fix\n",
+      " 2 files changed, 55 insertions(+), 3 deletions(-)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/elkomysara/alx-zero_day.git\n",
+      "   35cf8fd..f70a2ae  update_script -> update_script\n"
+     ]
+    }
+   ],
    "source": [
     "#Now that the changes are isolated correctly from the main branch\n",
     "\n",
@@ -470,7 +499,7 @@
     "!echo -e '!#/bin/bash\\necho \"ALX School is so cool!\"' > \"C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-zero_day/0x03-git/bash/alx\"\n",
     "\n",
     "#Delete the directory js\n",
-    "!rm -r ~/alx-zero_day/0x03-git/js/\n",
+    "!rm -r \"C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-zero_day/0x03-git/js/\"\n",
     "#Commit your changes (message: “Hot fix”) and push to the origin\n",
     "!git add .\n",
     "!git commit -m \"Hot fix\"\n",
