--- a/alx-zero_day.ipynb
+++ b/alx-zero_day.ipynb
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +467,6 @@
       "\talx-zero_day.ipynb\n",
       "Please commit your changes or stash them before you switch branches.\n",
       "Aborting\n",
-      "rm: ~/alx-zero_day/0x03-git/js: No such file or directory\n",
       "warning: in the working copy of 'alx-zero_day.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
      ]
     },
@@ -475,8 +474,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[update_script f70a2ae] Hot fix\n",
-      " 2 files changed, 55 insertions(+), 3 deletions(-)\n"
+      "[update_script 23523b9] Hot fix\n",
+      " 3 files changed, 32 insertions(+), 3 deletions(-)\n",
+      " delete mode 100644 0x03-git/js/index.js\n",
+      " delete mode 100644 0x03-git/js/main.js\n"
      ]
     },
     {
@@ -484,7 +485,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-zero_day.git\n",
-      "   35cf8fd..f70a2ae  update_script -> update_script\n"
+      "   f70a2ae..23523b9  update_script -> update_script\n"
      ]
     }
    ],
