--- a/alx-zero_day.ipynb
+++ b/alx-zero_day.ipynb
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -467,6 +467,7 @@
       "\talx-zero_day.ipynb\n",
       "Please commit your changes or stash them before you switch branches.\n",
       "Aborting\n",
+      "rm: C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-zero_day/0x03-git/js: No such file or directory\n",
       "warning: in the working copy of 'alx-zero_day.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
      ]
     },
@@ -474,10 +475,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[update_script 23523b9] Hot fix\n",
-      " 3 files changed, 32 insertions(+), 3 deletions(-)\n",
-      " delete mode 100644 0x03-git/js/index.js\n",
-      " delete mode 100644 0x03-git/js/main.js\n"
+      "[update_script 08ae933] Hot fix\n",
+      " 1 file changed, 6 insertions(+), 5 deletions(-)\n"
      ]
     },
     {
@@ -485,7 +484,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-zero_day.git\n",
-      "   f70a2ae..23523b9  update_script -> update_script\n"
+      "   23523b9..08ae933  update_script -> update_script\n"
      ]
     }
    ],
@@ -504,7 +503,8 @@
     "#Commit your changes (message: “Hot fix”) and push to the origin\n",
     "!git add .\n",
     "!git commit -m \"Hot fix\"\n",
-    "!git push"
+    "!git branch -M main\n",
+    "!git push -u origin main"
    ]
   },
   {
