How to be up to date in git

--- a/alx-zero_day.ipynb
+++ b/alx-zero_day.ipynb
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -475,8 +475,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[update_script 08ae933] Hot fix\n",
-      " 1 file changed, 6 insertions(+), 5 deletions(-)\n"
+      "[update_script d359f72] Hot fix\n",
+      " 1 file changed, 7 insertions(+), 7 deletions(-)\n",
+      "branch 'main' set up to track 'origin/main'.\n"
      ]
     },
     {
@@ -484,7 +485,9 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-zero_day.git\n",
-      "   23523b9..08ae933  update_script -> update_script\n"
+      "   a76cad3..d359f72  main -> main\n",
+      "warning: branch.main.remote has multiple values\n",
+      "warning: branch.main.merge has multiple values\n"
      ]
     }
    ],
@@ -505,6 +508,96 @@
     "!git commit -m \"Hot fix\"\n",
     "!git branch -M main\n",
     "!git push -u origin main"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. Collaboration: be up to date"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Work on the same branch as your co-workers and it’s best if you keep up to date with their changes.\n",
+    "\n",
+    "* update your file README.md in the main branch \n",
+    "\n",
+    "#### After that:\n",
+    "\n",
+    "* Get all changes of the main branch locally (i.e. your README.md file will be updated)\n",
+    "* Create a new file up_to_date at the root of your directory and in it, write the git command line used\n",
+    "* Add up_to_date to git, commit (message: “How to be up to date in git”), and push to the origin\n",
+    "\n",
+    "#### Repo:\n",
+    "* GitHub repository: alx-zero_day\n",
+    "* Directory: 0x03-git\n",
+    "* File: README.md, up_to_date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# update your file README.md in the main branch \n",
+    "# (github website)\n",
+    "\n",
+    "#Get all changes of the main branch locally (i.e. your README.md file will be updated)\n",
+    "!git pull\n",
+    "#Create a new file up_to_date at the root of your directory and in it, write the git command line used\n",
+    "!echo 'pull' > up_to_date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "warning: in the working copy of 'alx-zero_day.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "error: pathspec 'to' did not match any file(s) known to git\n",
+      "error: pathspec 'be' did not match any file(s) known to git\n",
+      "error: pathspec 'up' did not match any file(s) known to git\n",
+      "error: pathspec 'to' did not match any file(s) known to git\n",
+      "error: pathspec 'date' did not match any file(s) known to git\n",
+      "error: pathspec 'in' did not match any file(s) known to git\n",
+      "error: pathspec 'git'' did not match any file(s) known to git\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "branch 'main' set up to track 'origin/main'.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "warning: branch.main.remote has multiple values\n",
+      "warning: branch.main.merge has multiple values\n",
+      "Everything up-to-date\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#Add up_to_date to git, commit (message: “How to be up to date in git”), and push to the origin\n",
+    "!git add .\n",
+    "!git commit -m \"How to be up to date in git\"\n",
+    "!git branch -M main\n",
+    "!git push -u origin main\n"
    ]
   },
   {
