How to be up to date in git

--- a/alx-zero_day.ipynb
+++ b/alx-zero_day.ipynb
@@ -539,42 +539,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Already up to date.\n"
+     ]
+    }
+   ],
    "source": [
     "# update your file README.md in the main branch \n",
     "# (github website)\n",
-    "\n",
+    "!rm -r \n",
     "#Get all changes of the main branch locally (i.e. your README.md file will be updated)\n",
     "!git pull\n",
     "#Create a new file up_to_date at the root of your directory and in it, write the git command line used\n",
-    "!echo 'pull' > up_to_date"
+    "!echo 'git pull' > \"C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-zero_day/0x03-git/up_to_date\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "warning: in the working copy of 'alx-zero_day.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
-      "error: pathspec 'to' did not match any file(s) known to git\n",
-      "error: pathspec 'be' did not match any file(s) known to git\n",
-      "error: pathspec 'up' did not match any file(s) known to git\n",
-      "error: pathspec 'to' did not match any file(s) known to git\n",
-      "error: pathspec 'date' did not match any file(s) known to git\n",
-      "error: pathspec 'in' did not match any file(s) known to git\n",
-      "error: pathspec 'git'' did not match any file(s) known to git\n"
+      "warning: in the working copy of 'alx-zero_day.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[main dbb8fdf] How to be up to date in git\n",
+      " 2 files changed, 98 insertions(+), 4 deletions(-)\n",
+      " create mode 100644 up_to_date\n",
       "branch 'main' set up to track 'origin/main'.\n"
      ]
     },
@@ -582,22 +586,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "To https://github.com/elkomysara/alx-zero_day.git\n",
+      "   87ccdb0..dbb8fdf  main -> main\n",
       "warning: branch.main.remote has multiple values\n",
-      "warning: branch.main.merge has multiple values\n",
-      "Everything up-to-date\n"
+      "warning: branch.main.merge has multiple values\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "#Add up_to_date to git, commit (message: “How to be up to date in git”), and push to the origin\n",
     "!git add .\n",
     "!git commit -m \"How to be up to date in git\"\n",
     "!git branch -M main\n",
-    "!git push -u origin main\n"
+    "!git push -u origin main"
    ]
   },
   {
