How to be up to date in git

--- a/alx-zero_day.ipynb
+++ b/alx-zero_day.ipynb
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -576,9 +576,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main dbb8fdf] How to be up to date in git\n",
-      " 2 files changed, 98 insertions(+), 4 deletions(-)\n",
-      " create mode 100644 up_to_date\n",
+      "[main 493c27a] How to be up to date in git\n",
+      " 3 files changed, 22 insertions(+), 21 deletions(-)\n",
+      " create mode 100644 0x03-git/up_to_date\n",
+      " delete mode 100644 up_to_date\n",
       "branch 'main' set up to track 'origin/main'.\n"
      ]
     },
@@ -587,7 +588,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-zero_day.git\n",
-      "   87ccdb0..dbb8fdf  main -> main\n",
+      "   dbb8fdf..493c27a  main -> main\n",
       "warning: branch.main.remote has multiple values\n",
       "warning: branch.main.merge has multiple values\n"
      ]
@@ -598,6 +599,75 @@
     "!git add .\n",
     "!git commit -m \"How to be up to date in git\"\n",
     "!git branch -M main\n",
+    "!git push -u origin main"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5. HAAA what did you do???"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### What happens when you update the same file at the same time?\n",
+    "##### Merge the branch update_script to main: “Cool, all my changes will be now part of the main branch, ready to be deployed!”\n",
+    "##### CONFLICT (content): Merge conflict in bash/alx\n",
+    "##### You have conflicts between two branches on the same file.\n",
+    "##### Resolve conflicts by using the version of the branch update_script, and push the result to the origin.\n",
+    "##### You should have all your work from the branch update_script (new file and two updated files) and all latest main commits (new files, delete folder, etc.), without conflicts.\n",
+    "\n",
+    "##### Repo:\n",
+    "\n",
+    "* GitHub repository: alx-zero_day\n",
+    "* Directory: 0x03-git"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "M\talx-zero_day.ipynb\n",
+      "Your branch is up to date with 'origin/main'.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Already on 'main'\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Already up to date.\n",
+      "branch 'main' set up to track 'origin/main'.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "warning: branch.main.remote has multiple values\n",
+      "warning: branch.main.merge has multiple values\n",
+      "Everything up-to-date\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Merge the branch update_script to main: \"Cool, all my changes will be now part of the main branch, ready to be deployed!\"\n",
+    "!git switch main\n",
+    "!git merge origin/update_script\n",
     "!git push -u origin main"
    ]
   },
