getting done with things

--- a/alx-zero_day.ipynb
+++ b/alx-zero_day.ipynb
@@ -34,9 +34,8 @@
      "output_type": "stream",
      "text": [
       "Reinitialized existing Git repository in C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-zero_day/.git/\n",
-      "[main (root-commit) e6b53c3] first commit\n",
-      " 1 file changed, 1 insertion(+)\n",
-      " create mode 100644 README.md\n"
+      "[main 432c08c] first commit\n",
+      " 1 file changed, 1 insertion(+), 1 deletion(-)\n"
      ]
     },
     {
@@ -58,17 +57,36 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-zero_day.git\n",
-      " * [new branch]      main -> main\n"
+      "   7593c11..432c08c  main -> main\n",
+      "warning: branch.main.remote has multiple values\n",
+      "warning: branch.main.merge has multiple values\n"
      ]
     }
    ],
    "source": [
-    "!echo \"# alx-zero_day\" >> README.md\n",
+    "#Adding  text  to README.md. \n",
+    "#The >> operator is used to append the text to the file.\n",
+    "#and the > operator is used to  redirecting and overwriting the output to the file.\n",
+    "#If the file doesn't exist, it will be created.\n",
+    "!echo \"# alx-zero_day\" > README.md\n",
+    "#initializes a new Git repository in the current directory. \n",
+    "#Git will start tracking changes to files in this directory.\n",
     "!git init\n",
+    "#adds the README.md file to the staging area. \n",
+    "#The staging area is where you can place files you want to commit to the Git repository.\n",
     "!git add README.md\n",
+    "#This command creates a new commit with the changes that have been staged. \n",
+    "#The -m flag allows you to provide a commit message inline. \n",
     "!git commit -m \"first commit\"\n",
+    "#This command renames the default branch from \"master\" to \"main\". \n",
+    "#This change in naming convention is becoming more common in the Git community to promote inclusivity and remove potentially offensive terminology.\n",
     "!git branch -M main\n",
+    "#This command adds a remote repository named \"origin\" with the URL git@github.com:elkomysara/alx-zero_day.git.\n",
+    "#This URL is typically the SSH URL of a GitHub repository.\n",
+    "#This step establishes a connection between the local repository and the remote repository on GitHub.\n",
     "!git remote add origin git@github.com:elkomysara/alx-zero_day.git\n",
+    "#This command pushes the commits from the local \"main\" branch to the remote repository named \"origin\". \n",
+    "#The -u flag sets the upstream branch for the \"main\" branch, so in future pushes, you can simply use git push without specifying the remote branch.\n",
     "!git push -u origin main"
    ]
   },
@@ -76,7 +94,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 0. Create and setup your Git and GitHub account"
+    "---\n",
+    "<center>\n",
+    "<h4> 0. Create and setup your Git and GitHub account </h4>\n",
+    "</center>\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -105,19 +128,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting README.md\n"
+      "Overwriting C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-zero_day/README.md\n"
      ]
     }
    ],
    "source": [
-    "%%file README.md\n",
+    "%%file C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-zero_day/README.md\n",
     "\n",
     "This is a mandatory file."
    ]
@@ -126,30 +149,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. Repo-session\n"
+    "\n",
+    "---\n",
+    "<center>\n",
+    "<h4> 1. Repo-session </h4>\n",
+    "</center>\n",
+    "\n",
+    "---\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Create a new directory called <code style=\"color: red;\"> 0x03-git </code> in your <code style=\"color: red;\"> alx-zero_day </code>  repo.\n",
+    "* Create a new directory called <code style=\"color: red;\"> 0x03-git </code> in your <code style=\"color: red;\"> alx-zero_day </code>  repo.\n",
     "\n",
-    "##### Make sure you include a not empty <code style=\"color: red;\"> README.md </code>   in your directory:\n",
-    "* at the root of your repository <code style=\"color: red;\"> alx-zero_day </code>\n",
-    "* AND in the directory <code style=\"color: red;\"> 0x03-git </code>\n",
-    "* And important part: Make sure your commit and push your code to Github - otherwise the Checker will always fail.\n",
+    "* Make sure you include a not empty <code style=\"color: red;\"> README.md </code>   in your directory:\n",
+    "    * At the root of your repository <code style=\"color: red;\"> alx-zero_day </code>\n",
+    "    * AND in the directory <code style=\"color: red;\"> 0x03-git </code>\n",
+    "    * And important part: Make sure your commit and push your code to Github - otherwise the Checker will always fail.\n",
     "\n",
-    "#### Repo:\n",
+    "* Repo:\n",
     "\n",
-    "* GitHub repository: <code > alx-zero_day </code>"
+    "    * GitHub repository: <code > alx-zero_day </code>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "A subdirectory or file 0x03-git already exists.\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a new dir calle 0x03-git in alx-zero_day using python\n",
     "import os\n",
@@ -162,27 +199,57 @@
     "file_path = os.path.join(folder_path, 'README.md')\n",
     "\n",
     "with open(file_path, 'w') as file:\n",
-    "    file.write(\"This is a mandatory file\")"
+    "    file.write(\"README.md using python os library\")\n",
+    "\n",
+    "\n",
+    "# Create a new dir calle 0x03-git in alx-zero_day using cmd\n",
+    "!mkdir 0x03-git \n",
+    "!echo \"README.md using echo and magic commands\" > C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-zero_day/0x03-git/README.md\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* You cant put any notation like "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A subdirectory or file 0x03-git already exists.\n",
-      "Access is denied.\n"
+      "Overwriting C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-zero_day/0x03-git/README.md\n"
      ]
     }
    ],
    "source": [
-    "# Create a new dir calle 0x03-git in alx-zero_day using cmd\n",
-    "!mkdir 0x03-git \n",
-    "!echo \"not empty README.md\" > README.md"
+    "%%file C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-zero_day/0x03-git/README.md\n",
+    "\n",
+    "README.md using %%file "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-zero_day/0x03-git/README.md\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n"
    ]
   },
   {
@@ -290,9 +357,9 @@
    "outputs": [],
    "source": [
     "# Create a file bash/alx with these two lines inside: #!/bin/bash and echo \"ALX\"\n",
-    "!echo -e '#!/bin/bash\\necho \"ALX\"' > \"C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-zero_day/0x03-git/bash/alx\" \n",
+    "!echo -e '#!/bin/bash/necho \"ALX\"' > \"C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-zero_day/0x03-git/bash/alx\" \n",
     "#Create a file bash/school with these two lines inside: #!/bin/bash and echo \"School\"\n",
-    "!echo -e '#!/bin/bash\\necho \"School\"' > \"C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-zero_day/0x03-git/bash/school\""
+    "!echo -e '#!/bin/bash/necho \"School\"' > \"C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-zero_day/0x03-git/bash/school\""
    ]
   },
   {
@@ -441,10 +508,10 @@
     "!touch \"C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-zero_day/0x03-git/bash/98\"\n",
     "\n",
     "#Update bash/alx by replacing echo \"ALX\" with echo \"ALX School\"\n",
-    "!echo -e '!#/bin/bash\\necho \"ALX School\"' > \"C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-zero_day/0x03-git/bash/alx\"\n",
+    "!echo -e '!#/bin/bash/necho \"ALX School\"' > \"C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-zero_day/0x03-git/bash/alx\"\n",
     "\n",
     "#Update bash/school by replacing echo \"School\" with echo \"The school is open!\"\n",
-    "!echo -e '!#/bin/bash\\necho \"The school is open!\"' > \"C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-zero_day/0x03-git/bash/school\"\n",
+    "!echo -e '!#/bin/bash/necho \"The school is open!\"' > \"C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-zero_day/0x03-git/bash/school\"\n",
     "\n",
     "#Add and commit these changes (message: “My personal work”)\n",
     "!git add .\n",
@@ -693,9 +760,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "The system cannot find the path specified.\n",
+      "warning: in the working copy of 'alx-zero_day.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main 7593c11]  gitignore\n",
+      " 2 files changed, 43 insertions(+)\n",
+      " create mode 100644 0x03-git/.gitignore\n",
+      "branch 'main' set up to track 'origin/main'.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/elkomysara/alx-zero_day.git\n",
+      "   173f40f..7593c11  main -> main\n",
+      "warning: branch.main.remote has multiple values\n",
+      "warning: branch.main.merge has multiple values\n"
+     ]
+    }
+   ],
    "source": [
     "!cd ~/alx-zero_day/\n",
     "!echo \"*~\" > \"C:/Users/komy2/OneDrive/Desktop/AlxSE/Repos/alx-zero_day/0x03-git/.gitignore\"\n",
